调试原型代码
增加事务管理

--- a/server/picStoryServer/src/main/resources/jdbc.properties
+++ b/server/picStoryServer/src/main/resources/jdbc.properties
@@ -1,4 +1,24 @@
-username=root
-password
-url=jdbc:mysql://localhost:3306/ipicStory?useUnicode=true&amp;characterEncoding=utf8
-driverClassName=com.mysql.jdbc.Driver
+#mysql version database setting
+jdbc.driver=com.mysql.jdbc.Driver
+jdbc.url=jdbc:mysql://localhost:3306/ipicStory?useUnicode=true&amp;characterEncoding=utf8
+jdbc.username=root
+jdbc.password=
+hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
+hibernate.jdbc.batch_size=50
+hibernate.default_batch_fetch_size=16
+
+#hibernate settings
+hibernate.show_sql=true
+
+#dbcp settings
+dbcp.maxIdle=5
+dbcp.maxActive=40
+
+#more config
+dbcp.removeAbandoned=true
+dbcp.maxWait=3000
+dbcp.removeAbandonedTimeout=180
+dbcp.validationQuery=select 1 from dual
+dbcp.testOnBorrow=true
+dbcp.testOnReturn=false
+dbcp.testWhileIdle=true
