--- a/server/picStoryServer/.classpath
+++ b/server/picStoryServer/.classpath
@@ -70,6 +70,7 @@
   <classpathentry kind="var" path="M2_REPO/mysql/mysql-connector-java/5.1.21/mysql-connector-java-5.1.21.jar"/>
   <classpathentry kind="var" path="M2_REPO/velocity/velocity-dep/1.4/velocity-dep-1.4.jar"/>
   <classpathentry kind="var" path="M2_REPO/velocity/velocity/1.4/velocity-1.4.jar"/>
+  <classpathentry kind="var" path="M2_REPO/cglib/cglib-nodep/2.1_3/cglib-nodep-2.1_3.jar"/>
   <classpathentry kind="var" path="M2_REPO/org/codehaus/jackson/jackson-mapper-asl/1.9.3/jackson-mapper-asl-1.9.3.jar"/>
   <classpathentry kind="var" path="M2_REPO/org/codehaus/jackson/jackson-core-asl/1.9.3/jackson-core-asl-1.9.3.jar"/>
   <classpathentry kind="var" path="M2_REPO/com/google/code/gson/gson/2.2.2/gson-2.2.2.jar"/>
@@ -85,6 +86,8 @@
   <classpathentry kind="var" path="M2_REPO/org/springframework/webflow/spring-js/2.3.1.RELEASE/spring-js-2.3.1.RELEASE.jar"/>
   <classpathentry kind="var" path="M2_REPO/org/springframework/webflow/spring-js-resources/2.3.1.RELEASE/spring-js-resources-2.3.1.RELEASE.jar"/>
   <classpathentry kind="var" path="M2_REPO/org/apache/ibatis/ibatis-sqlmap/2.3.4.726/ibatis-sqlmap-2.3.4.726.jar"/>
+  <classpathentry kind="var" path="M2_REPO/commons-dbcp/commons-dbcp/1.2.2/commons-dbcp-1.2.2.jar"/>
+  <classpathentry kind="var" path="M2_REPO/commons-pool/commons-pool/1.3/commons-pool-1.3.jar"/>
   <classpathentry kind="var" path="M2_REPO/com/google/code/simple-spring-memcached/xmemcached-provider/3.1.0/xmemcached-provider-3.1.0.jar"/>
   <classpathentry kind="var" path="M2_REPO/com/google/code/simple-spring-memcached/simple-spring-memcached/3.1.0/simple-spring-memcached-3.1.0.jar"/>
   <classpathentry kind="var" path="M2_REPO/com/googlecode/xmemcached/xmemcached/1.3.8/xmemcached-1.3.8.jar"/>
