--- a/server/picStoryServer/pom.xml
+++ b/server/picStoryServer/pom.xml
@@ -126,6 +126,7 @@
 			<artifactId>hibernate-core</artifactId>
 			<version>4.1.6.Final</version>
 		</dependency>
+		
 		<dependency>
 			<groupId>org.apache.struts</groupId>
 			<artifactId>struts2-spring-plugin</artifactId>
@@ -137,76 +138,91 @@
 				</exclusion>
 			</exclusions>
 		</dependency>
+		
 		<dependency>
 			<groupId>org.apache.struts</groupId>
 			<artifactId>struts2-json-plugin</artifactId>
 			<version>2.3.4.1</version>
 		</dependency>
+		
 		<dependency>
 			<groupId>org.apache.struts</groupId>
 			<artifactId>struts2-jfreechart-plugin</artifactId>
 			<version>2.3.4.1</version>
 		</dependency>
+		
 		<dependency>
 			<groupId>org.apache.struts</groupId>
 			<artifactId>struts2-dwr-plugin</artifactId>
 			<version>2.3.4.1</version>
 		</dependency>
+		
 		<dependency>
 			<groupId>org.apache.struts</groupId>
 			<artifactId>struts2-convention-plugin</artifactId>
 			<version>2.3.4.1</version>
 		</dependency>
+		
 		<dependency>
 			<groupId>log4j</groupId>
 			<artifactId>log4j</artifactId>
 			<version>1.2.17</version>
 		</dependency>
+		
          <dependency> 
                <groupId>org.lazyluke</groupId> 
                <artifactId>log4jdbc-remix</artifactId> 
                <version>0.2.7</version> 
         </dependency> 
+        
 		<dependency>
 			<groupId>org.hibernate.javax.persistence</groupId>
 			<artifactId>hibernate-jpa-2.0-api</artifactId>
 			<version>1.0.0.Final</version>
 		</dependency>
+		
 		<dependency>
 			<groupId>org.hibernate</groupId>
 			<artifactId>hibernate-entitymanager</artifactId>
 			<version>4.1.4.Final</version>
 		</dependency>
+		
 		<dependency>
 			<groupId>org.slf4j</groupId>
 			<artifactId>slf4j-log4j12</artifactId>
 			<version>1.6.6</version>
 		</dependency>
+		
 		<dependency>
 			<groupId>joda-time</groupId>
 			<artifactId>joda-time</artifactId>
 			<version>2.1</version>
 		</dependency>
+		
 		<dependency>
 			<groupId>org.aspectj</groupId>
 			<artifactId>aspectjweaver</artifactId>
 			<version>1.7.0</version>
 		</dependency>
+		
 		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-aspects</artifactId>
 			<version>3.1.2.RELEASE</version>
 		</dependency>
+		
 		<dependency>
 			<groupId>org.hibernate</groupId>
 			<artifactId>hibernate-validator</artifactId>
 			<version>4.2.0.Final</version>
 		</dependency>
+		
 		<dependency>
 			<groupId>mysql</groupId>
 			<artifactId>mysql-connector-java</artifactId>
 			<version>5.1.21</version>
 		</dependency>
+		
 		<dependency>
 			<groupId>velocity</groupId>
 			<artifactId>velocity-dep</artifactId>
@@ -217,42 +233,44 @@
 			<artifactId>velocity</artifactId>
 			<version>1.4</version>
 		</dependency>
-
+		
+	    <dependency>
+	        <groupId>cglib</groupId>
+	        <artifactId>cglib-nodep</artifactId>
+	        <version>2.1_3</version>
+        </dependency>
+        
 		<!-- json -->
 		<dependency>
 			<groupId>org.codehaus.jackson</groupId>
 			<artifactId>jackson-mapper-asl</artifactId>
 			<version>1.9.3</version>
 		</dependency>
-
 		<!-- gson -->
 		<dependency>  
             <groupId>com.google.code.gson</groupId>  
             <artifactId>gson</artifactId>  
             <version>2.2.2</version>  
         </dependency>  
-
+        
 		<!-- rss -->
 		<dependency>
 			<groupId>net.java.dev.rome</groupId>
 			<artifactId>rome</artifactId>
 			<version>1.0.0</version>
 		</dependency>
-
-
+		
 		<!-- mybatis -->
 		<dependency>
 			<groupId>org.mybatis</groupId>
 			<artifactId>mybatis</artifactId>
 			<version>3.1.1</version>
 		</dependency>
-
 		<dependency>
 			<groupId>org.mybatis</groupId>
 			<artifactId>mybatis-spring</artifactId>
 			<version>1.1.1</version>
 		</dependency>
-
 		<dependency>
 			<groupId>org.directwebremoting</groupId>
 			<artifactId>dwr</artifactId>
@@ -293,12 +311,26 @@
 	        <version>2.3.4.726</version>
         </dependency>
         
+        <!--Date Sources  -->
+        <!-- 
+	    <dependency>
+	        <groupId>c3p0</groupId>
+			<artifactId>c3p0</artifactId>
+			<version>0.9.1.2</version>
+	    </dependency>	
+	    -->
+	    <dependency>
+			<groupId>commons-dbcp</groupId>
+		    <artifactId>commons-dbcp</artifactId>
+			<version>1.2.2</version>
+	    </dependency>	
+
         <!-- spring memcached -->
-         <dependency>
+        <dependency>
             <groupId>com.google.code.simple-spring-memcached</groupId>
             <artifactId>xmemcached-provider</artifactId>
             <version>3.1.0</version>
-        </dependency> 
+       </dependency> 
 	</dependencies>
 
 	<build>
