--- a/server/picStoryServer/.classpath
+++ b/server/picStoryServer/.classpath
@@ -41,23 +41,6 @@
   <classpathentry kind="var" path="M2_REPO/org/hibernate/javax/persistence/hibernate-jpa-2.0-api/1.0.0.Final/hibernate-jpa-2.0-api-1.0.0.Final.jar"/>
   <classpathentry kind="var" path="M2_REPO/org/javassist/javassist/3.15.0-GA/javassist-3.15.0-GA.jar"/>
   <classpathentry kind="var" path="M2_REPO/org/hibernate/common/hibernate-commons-annotations/4.0.1.Final/hibernate-commons-annotations-4.0.1.Final.jar"/>
-  <classpathentry kind="var" path="M2_REPO/org/apache/struts/struts2-spring-plugin/2.3.4.1/struts2-spring-plugin-2.3.4.1.jar"/>
-  <classpathentry kind="var" path="M2_REPO/org/apache/commons/commons-lang3/3.1/commons-lang3-3.1.jar"/>
-  <classpathentry kind="var" path="M2_REPO/org/apache/struts/struts2-core/2.3.4.1/struts2-core-2.3.4.1.jar"/>
-  <classpathentry kind="var" path="M2_REPO/org/apache/struts/xwork/xwork-core/2.3.4.1/xwork-core-2.3.4.1.jar"/>
-  <classpathentry kind="var" path="M2_REPO/ognl/ognl/3.0.5/ognl-3.0.5.jar"/>
-  <classpathentry kind="var" path="M2_REPO/javassist/javassist/3.11.0.GA/javassist-3.11.0.GA.jar"/>
-  <classpathentry kind="var" path="M2_REPO/asm/asm/3.3/asm-3.3.jar"/>
-  <classpathentry kind="var" path="M2_REPO/asm/asm-commons/3.3/asm-commons-3.3.jar"/>
-  <classpathentry kind="var" path="M2_REPO/asm/asm-tree/3.3/asm-tree-3.3.jar"/>
-  <classpathentry kind="var" path="M2_REPO/org/freemarker/freemarker/2.3.19/freemarker-2.3.19.jar"/>
-  <classpathentry kind="var" path="M2_REPO/commons-fileupload/commons-fileupload/1.2.2/commons-fileupload-1.2.2.jar"/>
-  <classpathentry kind="var" path="M2_REPO/commons-io/commons-io/2.0.1/commons-io-2.0.1.jar"/>
-  <classpathentry kind="var" path="M2_REPO/org/apache/struts/struts2-json-plugin/2.3.4.1/struts2-json-plugin-2.3.4.1.jar"/>
-  <classpathentry kind="var" path="M2_REPO/org/apache/struts/struts2-jfreechart-plugin/2.3.4.1/struts2-jfreechart-plugin-2.3.4.1.jar"/>
-  <classpathentry kind="var" path="M2_REPO/org/apache/struts/struts2-dwr-plugin/2.3.4.1/struts2-dwr-plugin-2.3.4.1.jar"/>
-  <classpathentry kind="var" path="M2_REPO/uk/ltd/getahead/dwr/1.1.1/dwr-1.1.1.jar"/>
-  <classpathentry kind="var" path="M2_REPO/org/apache/struts/struts2-convention-plugin/2.3.4.1/struts2-convention-plugin-2.3.4.1.jar"/>
   <classpathentry kind="var" path="M2_REPO/log4j/log4j/1.2.17/log4j-1.2.17.jar"/>
   <classpathentry kind="var" path="M2_REPO/org/lazyluke/log4jdbc-remix/0.2.7/log4jdbc-remix-0.2.7.jar"/>
   <classpathentry kind="var" path="M2_REPO/junit/junit/4.7/junit-4.7.jar"/>
@@ -68,24 +51,21 @@
   <classpathentry kind="var" path="M2_REPO/org/springframework/spring-aspects/3.1.2.RELEASE/spring-aspects-3.1.2.RELEASE.jar"/>
   <classpathentry kind="var" path="M2_REPO/org/hibernate/hibernate-validator/4.2.0.Final/hibernate-validator-4.2.0.Final.jar"/>
   <classpathentry kind="var" path="M2_REPO/mysql/mysql-connector-java/5.1.21/mysql-connector-java-5.1.21.jar"/>
-  <classpathentry kind="var" path="M2_REPO/velocity/velocity-dep/1.4/velocity-dep-1.4.jar"/>
-  <classpathentry kind="var" path="M2_REPO/velocity/velocity/1.4/velocity-1.4.jar"/>
   <classpathentry kind="var" path="M2_REPO/cglib/cglib-nodep/2.1_3/cglib-nodep-2.1_3.jar"/>
+  <classpathentry kind="var" path="M2_REPO/commons-io/commons-io/1.3.2/commons-io-1.3.2.jar"/>
+  <classpathentry kind="var" path="M2_REPO/commons-fileupload/commons-fileupload/1.2.2/commons-fileupload-1.2.2.jar"/>
+  <classpathentry kind="var" path="M2_REPO/commons-lang/commons-lang/2.6/commons-lang-2.6.jar"/>
+  <classpathentry kind="var" path="M2_REPO/commons-codec/commons-codec/1.7/commons-codec-1.7.jar"/>
   <classpathentry kind="var" path="M2_REPO/org/codehaus/jackson/jackson-mapper-asl/1.9.3/jackson-mapper-asl-1.9.3.jar"/>
   <classpathentry kind="var" path="M2_REPO/org/codehaus/jackson/jackson-core-asl/1.9.3/jackson-core-asl-1.9.3.jar"/>
+  <classpathentry kind="var" path="M2_REPO/commons-beanutils/commons-beanutils/1.8.3/commons-beanutils-1.8.3.jar"/>
   <classpathentry kind="var" path="M2_REPO/com/google/code/gson/gson/2.2.2/gson-2.2.2.jar"/>
   <classpathentry kind="var" path="M2_REPO/net/java/dev/rome/rome/1.0.0/rome-1.0.0.jar"/>
   <classpathentry kind="var" path="M2_REPO/jdom/jdom/1.0/jdom-1.0.jar"/>
-  <classpathentry kind="var" path="M2_REPO/org/mybatis/mybatis/3.1.1/mybatis-3.1.1.jar"/>
-  <classpathentry kind="var" path="M2_REPO/org/mybatis/mybatis-spring/1.1.1/mybatis-spring-1.1.1.jar"/>
-  <classpathentry kind="var" path="M2_REPO/org/directwebremoting/dwr/3.0.M1/dwr-3.0.M1.jar"/>
-  <classpathentry kind="var" path="M2_REPO/org/mortbay/jetty/cometd/6.1.4/cometd-6.1.4.jar"/>
-  <classpathentry kind="var" path="M2_REPO/org/mortbay/jetty/jetty-util/6.1.4/jetty-util-6.1.4.jar"/>
   <classpathentry kind="var" path="M2_REPO/org/springframework/webflow/spring-webflow/2.3.1.RELEASE/spring-webflow-2.3.1.RELEASE.jar"/>
   <classpathentry kind="var" path="M2_REPO/org/springframework/webflow/spring-binding/2.3.1.RELEASE/spring-binding-2.3.1.RELEASE.jar"/>
   <classpathentry kind="var" path="M2_REPO/org/springframework/webflow/spring-js/2.3.1.RELEASE/spring-js-2.3.1.RELEASE.jar"/>
   <classpathentry kind="var" path="M2_REPO/org/springframework/webflow/spring-js-resources/2.3.1.RELEASE/spring-js-resources-2.3.1.RELEASE.jar"/>
-  <classpathentry kind="var" path="M2_REPO/org/apache/ibatis/ibatis-sqlmap/2.3.4.726/ibatis-sqlmap-2.3.4.726.jar"/>
   <classpathentry kind="var" path="M2_REPO/commons-dbcp/commons-dbcp/1.2.2/commons-dbcp-1.2.2.jar"/>
   <classpathentry kind="var" path="M2_REPO/commons-pool/commons-pool/1.3/commons-pool-1.3.jar"/>
   <classpathentry kind="var" path="M2_REPO/com/google/code/simple-spring-memcached/xmemcached-provider/3.1.0/xmemcached-provider-3.1.0.jar"/>
