--- a/server/picStoryServer/pom.xml
+++ b/server/picStoryServer/pom.xml
@@ -31,7 +31,7 @@
 		</developer>
 	</developers>
 
-	<!--许可证 -->
+	<!--  许可证 -->
 	<licenses>
 		<license>
 			<url>http://127.0.0.1:8080</url>
@@ -120,13 +120,16 @@
 			<artifactId>spring-data-jpa</artifactId>
 			<version>1.1.0.RELEASE</version>
 		</dependency>
-
+		
+        <!--  Persistence -->
 		<dependency>
 			<groupId>org.hibernate</groupId>
 			<artifactId>hibernate-core</artifactId>
 			<version>4.1.6.Final</version>
 		</dependency>
 		
+		<!-- 
+		struts2 
 		<dependency>
 			<groupId>org.apache.struts</groupId>
 			<artifactId>struts2-spring-plugin</artifactId>
@@ -162,7 +165,9 @@
 			<artifactId>struts2-convention-plugin</artifactId>
 			<version>2.3.4.1</version>
 		</dependency>
-		
+		-->
+	
+		 
 		<dependency>
 			<groupId>log4j</groupId>
 			<artifactId>log4j</artifactId>
@@ -222,45 +227,71 @@
 			<artifactId>mysql-connector-java</artifactId>
 			<version>5.1.21</version>
 		</dependency>
-		
-		<dependency>
-			<groupId>velocity</groupId>
-			<artifactId>velocity-dep</artifactId>
-			<version>1.4</version>
-		</dependency>
-		<dependency>
-			<groupId>velocity</groupId>
-			<artifactId>velocity</artifactId>
-			<version>1.4</version>
-		</dependency>
-		
+		 
 	    <dependency>
 	        <groupId>cglib</groupId>
 	        <artifactId>cglib-nodep</artifactId>
 	        <version>2.1_3</version>
         </dependency>
         
-		<!-- json -->
+	   <!--   Apache Commons Upload   -->
+        <dependency> 
+          <groupId>org.apache.commons</groupId>
+          <artifactId>commons-io</artifactId> 
+          <version>1.3.2</version> 
+       </dependency> 
+       <dependency>
+          <groupId>commons-fileupload</groupId>
+          <artifactId>commons-fileupload</artifactId>
+          <version>1.2.2</version>
+       </dependency>
+       
+        <!-- Jakarta Commons -->
 		<dependency>
-			<groupId>org.codehaus.jackson</groupId>
-			<artifactId>jackson-mapper-asl</artifactId>
-			<version>1.9.3</version>
+			<groupId>commons-lang</groupId>
+			<artifactId>commons-lang</artifactId>
+			<version>2.6</version>
+		</dependency>	
+		<dependency>
+		  <groupId>commons-logging</groupId>
+		  <artifactId>commons-logging</artifactId>
+		  <version>1.1.1</version>
 		</dependency>
-		<!-- gson -->
+		<dependency>
+		  <groupId>commons-codec</groupId>
+		  <artifactId>commons-codec</artifactId>
+		  <version>1.7</version>
+		</dependency>
+		<dependency>
+		  <groupId>org.codehaus.jackson</groupId>
+		  <artifactId>jackson-mapper-asl</artifactId>
+		  <version>1.9.3</version>
+		</dependency>
+	    <dependency>
+		  <groupId>commons-beanutils</groupId>
+		  <artifactId>commons-beanutils</artifactId>
+		  <version>1.8.3</version>
+		</dependency>
+		
+
+        
+         
+		<!--   gson   -->
 		<dependency>  
             <groupId>com.google.code.gson</groupId>  
             <artifactId>gson</artifactId>  
             <version>2.2.2</version>  
         </dependency>  
         
-		<!-- rss -->
+		<!--   rss   -->
 		<dependency>
 			<groupId>net.java.dev.rome</groupId>
 			<artifactId>rome</artifactId>
 			<version>1.0.0</version>
 		</dependency>
 		
-		<!-- mybatis -->
+		<!--   
+		mybatis   
 		<dependency>
 			<groupId>org.mybatis</groupId>
 			<artifactId>mybatis</artifactId>
@@ -276,7 +307,8 @@
 			<artifactId>dwr</artifactId>
 			<version>3.0.M1</version>
 		</dependency>
-
+        -->
+        
 		<dependency>
 			<groupId>org.springframework.webflow</groupId>
 			<artifactId>spring-webflow</artifactId>
@@ -304,14 +336,15 @@
 		</dependency> 
 		-->
 
-		<!-- ibatis --> 
+		<!--   ibatis   
         <dependency>
 	        <groupId>org.apache.ibatis</groupId>
 	        <artifactId>ibatis-sqlmap</artifactId>
 	        <version>2.3.4.726</version>
         </dependency>
+        --> 
         
-        <!--Date Sources  -->
+        <!--   Date Sources  -->
         <!-- 
 	    <dependency>
 	        <groupId>c3p0</groupId>
