--- a/server/picStoryServer/pom.xml
+++ b/server/picStoryServer/pom.xml
@@ -128,46 +128,94 @@
 			<version>4.1.6.Final</version>
 		</dependency>
 		
-		<!-- 
-		struts2 
 		<dependency>
-			<groupId>org.apache.struts</groupId>
-			<artifactId>struts2-spring-plugin</artifactId>
-			<version>2.3.4.1</version>
+		  <groupId>org.apache.poi</groupId>
+		  <artifactId>poi</artifactId>
+		  <version>3.6</version>
+		</dependency>
+		
+		<dependency>
+		  <groupId>org.apache.poi</groupId>
+		  <artifactId>poi-scratchpad</artifactId>
+		  <version>3.6</version>
+		</dependency>
+		
+		<dependency>
+		  <groupId>org.apache.poi</groupId>
+		  <artifactId>poi-contrib</artifactId>
+		  <version>3.6</version>
+		</dependency>
+		
+		<dependency>
+		  <groupId>org.apache.poi</groupId>
+		  <artifactId>poi-ooxml</artifactId>
+		  <version>3.6</version>
+		</dependency>
+		
+		<dependency>
+		  <groupId>org.apache.poi</groupId>
+		  <artifactId>poi-ooxml-schemas</artifactId>
+		  <version>3.6</version>
+		</dependency>
+		
+		<dependency>
+		  <groupId>org.tuckey</groupId>
+		  <artifactId>urlrewritefilter</artifactId>
+		  <version>3.1.0</version>
+		</dependency>
+		
+		<dependency>
+  		  <groupId>com.octo.captcha</groupId>
+		  <artifactId>jcaptcha-all</artifactId>
+		  <version>1.0-RC6</version>
 			<exclusions>
+		        <exclusion>
+		          <groupId>quartz</groupId>
+		          <artifactId>quartz</artifactId>
+		        </exclusion>
 				<exclusion>
-					<groupId>com.sun</groupId>
-					<artifactId>tools</artifactId>
-				</exclusion>
-			</exclusions>
+		          <groupId>commons-pool</groupId>
+		          <artifactId>commons-pool</artifactId>
+		        </exclusion>
+				<exclusion>
+		          <groupId>org.springframework</groupId>
+		          <artifactId>spring-beans</artifactId>
+		        </exclusion>
+				<exclusion>
+		          <groupId>hsqldb</groupId>
+		          <artifactId>hsqldb</artifactId>
+		        </exclusion>
+				<exclusion>
+		          <groupId>concurrent</groupId>
+		          <artifactId>concurrent</artifactId>
+		        </exclusion>
+				<exclusion>
+		          <groupId>org.springframework</groupId>
+		          <artifactId>spring</artifactId>
+		        </exclusion>
+				<exclusion>
+		          <groupId>xerces</groupId>
+		          <artifactId>xercesImpl</artifactId>
+		        </exclusion>
+				<exclusion>
+		          <groupId>xerces</groupId>
+		          <artifactId>xmlParserAPIs</artifactId>
+		        </exclusion>			        	        		        		        		        
+	      </exclusions>		  
 		</dependency>
 		
 		<dependency>
-			<groupId>org.apache.struts</groupId>
-			<artifactId>struts2-json-plugin</artifactId>
-			<version>2.3.4.1</version>
+			<groupId>quartz</groupId>
+			<artifactId>quartz</artifactId>
+			<version>1.5.2</version>
 		</dependency>
 		
 		<dependency>
-			<groupId>org.apache.struts</groupId>
-			<artifactId>struts2-jfreechart-plugin</artifactId>
-			<version>2.3.4.1</version>
-		</dependency>
-		
-		<dependency>
-			<groupId>org.apache.struts</groupId>
-			<artifactId>struts2-dwr-plugin</artifactId>
-			<version>2.3.4.1</version>
-		</dependency>
-		
-		<dependency>
-			<groupId>org.apache.struts</groupId>
-			<artifactId>struts2-convention-plugin</artifactId>
-			<version>2.3.4.1</version>
-		</dependency>
-		-->
+	        <groupId>javax.mail</groupId>
+	        <artifactId>mail</artifactId>
+	        <version>1.4.6</version>
+        </dependency>		
 	
-		 
 		<dependency>
 			<groupId>log4j</groupId>
 			<artifactId>log4j</artifactId>
@@ -234,9 +282,15 @@
 	        <version>2.1_3</version>
         </dependency>
         
+		<dependency>
+	       <groupId>com.google.collections</groupId>
+	       <artifactId>google-collections</artifactId>
+	       <version>1.0</version>
+        </dependency>
+		
 	   <!--   Apache Commons Upload   -->
         <dependency> 
-          <groupId>org.apache.commons</groupId>
+          <groupId>commons-io</groupId>
           <artifactId>commons-io</artifactId> 
           <version>1.3.2</version> 
        </dependency> 
@@ -289,25 +343,6 @@
 			<artifactId>rome</artifactId>
 			<version>1.0.0</version>
 		</dependency>
-		
-		<!--   
-		mybatis   
-		<dependency>
-			<groupId>org.mybatis</groupId>
-			<artifactId>mybatis</artifactId>
-			<version>3.1.1</version>
-		</dependency>
-		<dependency>
-			<groupId>org.mybatis</groupId>
-			<artifactId>mybatis-spring</artifactId>
-			<version>1.1.1</version>
-		</dependency>
-		<dependency>
-			<groupId>org.directwebremoting</groupId>
-			<artifactId>dwr</artifactId>
-			<version>3.0.M1</version>
-		</dependency>
-        -->
         
 		<dependency>
 			<groupId>org.springframework.webflow</groupId>
@@ -315,49 +350,19 @@
 			<version>2.3.1.RELEASE</version>
 		</dependency>
 
-		<!-- 
-		Struts 1.3.10
-		<dependency> 
-			<groupId>org.apache.struts</groupId> 
-			<artifactId>struts-core</artifactId> 
-			<version>1.3.10</version> 
-		</dependency> 
-		
-		<dependency> 
-			<groupId>org.apache.struts</groupId> 
-			<artifactId>struts-taglib</artifactId> 
-			<version>1.3.10</version> 
-		</dependency> 
-		
-		<dependency> 
-			<groupId>org.apache.struts</groupId> 
-			<artifactId>struts-extras</artifactId> 
-			<version>1.3.10</version> 
-		</dependency> 
-		-->
-
-		<!--   ibatis   
-        <dependency>
-	        <groupId>org.apache.ibatis</groupId>
-	        <artifactId>ibatis-sqlmap</artifactId>
-	        <version>2.3.4.726</version>
-        </dependency>
-        --> 
-        
-        <!--   Date Sources  -->
-        <!-- 
-	    <dependency>
-	        <groupId>c3p0</groupId>
-			<artifactId>c3p0</artifactId>
-			<version>0.9.1.2</version>
-	    </dependency>	
-	    -->
 	    <dependency>
 			<groupId>commons-dbcp</groupId>
 		    <artifactId>commons-dbcp</artifactId>
 			<version>1.2.2</version>
 	    </dependency>	
 
+       <!-- Free Marker -->
+		<dependency>
+		    <groupId>org.freemarker</groupId>
+		    <artifactId>freemarker</artifactId>
+		    <version>2.3.9</version>
+		</dependency>
+		
         <!-- spring memcached -->
         <dependency>
             <groupId>com.google.code.simple-spring-memcached</groupId>
