--- a/server/picStoryServer/src/main/webapp/WEB-INF/web.xml
+++ b/server/picStoryServer/src/main/webapp/WEB-INF/web.xml
@@ -114,11 +114,7 @@
 	</servlet-mapping>
 	<servlet-mapping>
 		<servlet-name>dispatcherServlet</servlet-name>
-		<url-pattern>/json/*</url-pattern>
-	</servlet-mapping>
-		<servlet-mapping>
-		<servlet-name>dispatcherServlet</servlet-name>
-		<url-pattern>/xml/*</url-pattern>
+		<url-pattern>/*</url-pattern>
 	</servlet-mapping>
 	
 	<session-config>
