--- a/server/picStoryServer/pom.xml
+++ b/server/picStoryServer/pom.xml
@@ -372,7 +372,7 @@
 	</dependencies>
 
 	<build>
-		<finalName>picStoryServer</finalName>
+		<finalName>picStoryServer_0.0.1</finalName>
 		<plugins>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
