--- a/server/picStoryServer/src/main/resources/jdbc.properties
+++ b/server/picStoryServer/src/main/resources/jdbc.properties
@@ -1,6 +1,6 @@
 #mysql version database setting
 jdbc.driver=com.mysql.jdbc.Driver
-jdbc.url=jdbc:mysql://localhost:3306/ipicStory?useUnicode=true&amp;characterEncoding=utf8
+jdbc.url=jdbc:mysql://localhost:3306/app_ipicstory?useUnicode=true&amp;characterEncoding=utf8
 jdbc.username=root
 jdbc.password=
 hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
