--- a/server/picStoryServer/src/main/webapp/WEB-INF/web.xml
+++ b/server/picStoryServer/src/main/webapp/WEB-INF/web.xml
@@ -3,7 +3,7 @@
 	xmlns="http://java.sun.com/xml/ns/javaee" xmlns:web="http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd"
 	xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd"
 	version="2.5">
-	<display-name>picStoryServer</display-name>
+	<display-name>picStoryServer_0.0.1</display-name>
 	
 	<!-- Spring MVC中获取Request -->
 	<listener>
