--- a/iOS/gongan/policeOnline/policeOnline/policeOnline-Info.plist
+++ b/iOS/gongan/policeOnline/policeOnline/policeOnline-Info.plist
@@ -24,7 +24,7 @@
 		</dict>
 	</dict>
 	<key>CFBundleIdentifier</key>
-	<string>com.ruihaotai.gongan</string>
+	<string>com.gagein.gongan</string>
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
 	<key>CFBundleName</key>
