--- a/server/picStoryServer/pom.xml
+++ b/server/picStoryServer/pom.xml
@@ -383,6 +383,14 @@
 					<target>1.6</target>
 				</configuration>
 			</plugin>
+			
+			<plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <configuration>
+                  <skip>true</skip>
+               </configuration>
+            </plugin>
 
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
