增加服务器的hessian调用，拆pool
增加服务器的hessian调用，拆pool, 在服务端实现应用的分布式

--- a/server/picStoryServer/pom.xml
+++ b/server/picStoryServer/pom.xml
@@ -369,6 +369,14 @@
             <artifactId>xmemcached-provider</artifactId>
             <version>3.1.0</version>
        </dependency> 
+        
+        <!-- hessian -->
+       <dependency>
+            <groupId>com.caucho</groupId>
+            <artifactId>hessian</artifactId>
+            <version>4.0.7</version>
+       </dependency>
+    
 	</dependencies>
 
 	<build>
