--- a/server/picStoryServer/src/main/resources/jdbc.properties
+++ b/server/picStoryServer/src/main/resources/jdbc.properties
@@ -1,12 +1,12 @@
 #mysql version database setting
 jdbc.driver=com.mysql.jdbc.Driver
-#jdbc.url=jdbc:mysql://localhost:3306/ipicstory?useUnicode=true&amp;characterEncoding=utf8
-#jdbc.username=root
-#jdbc.password=
-#test remote space
-jdbc.url=jdbc:mysql://122.115.57.16:3306/ipicstory?useUnicode=true&amp;characterEncoding=utf8
+jdbc.url=jdbc:mysql://localhost:3306/ipicstory?useUnicode=true&amp;characterEncoding=utf8
 jdbc.username=root
-jdbc.password=123456
+jdbc.password=
+#test remote space
+#jdbc.url=jdbc:mysql://122.115.57.16:3306/ipicstory?useUnicode=true&amp;characterEncoding=utf8
+#jdbc.username=root
+#jdbc.password=123456
 hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
 hibernate.jdbc.batch_size=50
 hibernate.default_batch_fetch_size=16
