--- a/server/picStoryServer/.classpath
+++ b/server/picStoryServer/.classpath
@@ -84,6 +84,8 @@
   <classpathentry kind="var" path="M2_REPO/org/springframework/webflow/spring-js/2.3.1.RELEASE/spring-js-2.3.1.RELEASE.jar"/>
   <classpathentry kind="var" path="M2_REPO/org/springframework/webflow/spring-js-resources/2.3.1.RELEASE/spring-js-resources-2.3.1.RELEASE.jar"/>
   <classpathentry kind="var" path="M2_REPO/commons-pool/commons-pool/1.3/commons-pool-1.3.jar"/>
+  <classpathentry kind="var" path="M2_REPO/com/alibaba/druid/0.2.9/druid-0.2.9.jar"/>
+  <classpathentry kind="lib" path="/System/Library/Java/JavaVirtualMachines/1.6.0.jdk/Contents/Home/lib/jconsole.jar"/>
   <classpathentry kind="var" path="M2_REPO/org/freemarker/freemarker/2.3.9/freemarker-2.3.9.jar"/>
   <classpathentry kind="var" path="M2_REPO/com/google/code/simple-spring-memcached/xmemcached-provider/3.1.0/xmemcached-provider-3.1.0.jar"/>
   <classpathentry kind="var" path="M2_REPO/com/google/code/simple-spring-memcached/simple-spring-memcached/3.1.0/simple-spring-memcached-3.1.0.jar"/>
