--- a/server/picStoryServer/src/main/webapp/WEB-INF/web.xml
+++ b/server/picStoryServer/src/main/webapp/WEB-INF/web.xml
@@ -34,6 +34,42 @@
 		<url-pattern>/CheckCode.svl</url-pattern>
 	</servlet-mapping>
 	
+	<!-- Druid 数据源内置监控页面 -->
+	<servlet>
+      <servlet-name>DruidStatView</servlet-name>
+      <servlet-class>com.alibaba.druid.support.http.StatViewServlet</servlet-class>
+    </servlet>
+    <servlet-mapping>
+      <servlet-name>DruidStatView</servlet-name>
+      <url-pattern>/druid/*</url-pattern>
+    </servlet-mapping>
+    
+    <servlet>
+       <servlet-name>DruidStatView</servlet-name>
+       <servlet-class>com.alibaba.druid.support.http.StatViewServlet</servlet-class>
+       <init-param>
+         <param-name>resetEnable</param-name>
+         <param-value>true</param-value>
+       </init-param>
+     </servlet>
+      
+     <filter>
+       <filter-name>DruidWebStatFilter</filter-name>
+       <filter-class>com.alibaba.druid.support.http.WebStatFilter</filter-class>
+       <init-param>
+          <param-name>exclusions</param-name>
+          <param-value>*.js,*.gif,*.jpg,*.png,*.css,*.ico,/druid/*</param-value>
+       </init-param>
+       <init-param>
+          <param-name>profileEnable</param-name>
+          <param-value>true</param-value>
+       </init-param>
+     </filter>
+     <filter-mapping>
+       <filter-name>DruidWebStatFilter</filter-name>
+       <url-pattern>/*</url-pattern>
+     </filter-mapping>
+  
     <!--  -->
     <servlet>
 		<servlet-name>initPage</servlet-name>
