--- a/server/picStoryServer/pom.xml
+++ b/server/picStoryServer/pom.xml
@@ -535,6 +535,11 @@
 				<artifactId>maven-jetty-plugin</artifactId>
 				<configuration>
 					<scanIntervalSeconds>10</scanIntervalSeconds>
+                    <connectors>  
+                       <connector implementation="org.mortbay.jetty.nio.SelectChannelConnector">  
+                            <port>8000</port>  
+                       </connector>  
+                    </connectors>  					
 					<stopPort>9966</stopPort>
 					<stopKey>foo</stopKey>
 				</configuration>
