--- a/server/picStoryServer/pom.xml
+++ b/server/picStoryServer/pom.xml
@@ -394,6 +394,13 @@
             <artifactId>shards</artifactId>
             <version>3.1</version>
         </dependency>
+        
+       	<!-- dubbo -->       	
+       	<dependency>  
+            <groupId>com.alibaba</groupId>  
+            <artifactId>dubbo</artifactId>  
+            <version>2.5.3</version>  
+        </dependency>  
 	
 	</dependencies>
 
