--- a/server/picStoryServer/pom.xml
+++ b/server/picStoryServer/pom.xml
@@ -399,7 +399,13 @@
        	<dependency>  
             <groupId>com.alibaba</groupId>  
             <artifactId>dubbo</artifactId>  
-            <version>2.5.3</version>  
+            <version>2.5.3</version>
+			<exclusions>
+				<exclusion>
+					<groupId>org.springframework</groupId>
+					<artifactId>spring</artifactId>
+				</exclusion>
+			</exclusions>              
         </dependency>  
 	
 	</dependencies>
